; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavfilter/extr_formats.c_ff_set_common_samplerates.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavfilter/extr_formats.c_ff_set_common_samplerates.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@in_samplerates = common dso_local global i32 0, align 4
@out_samplerates = common dso_local global i32 0, align 4
@ff_formats_ref = common dso_local global i32 0, align 4
@ff_formats_unref = common dso_local global i32 0, align 4
@formats = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ff_set_common_samplerates(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = load i32*, i32** %5, align 8
  %8 = load i32, i32* @in_samplerates, align 4
  %9 = load i32, i32* @out_samplerates, align 4
  %10 = load i32, i32* @ff_formats_ref, align 4
  %11 = load i32, i32* @ff_formats_unref, align 4
  %12 = load i32, i32* @formats, align 4
  %13 = call i32 @SET_COMMON_FORMATS(i32* %6, i32* %7, i32 %8, i32 %9, i32 %10, i32 %11, i32 %12)
  %14 = load i32, i32* %3, align 4
  ret i32 %14
}

declare dso_local i32 @SET_COMMON_FORMATS(i32*, i32*, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
